<resources>
    <string name="app_name">BookListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lemzy">Lemzy</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login_now">Login Now</string>
    <string name="create_account">Create Account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_fav_book">Favorite Books</string>
    <string name="menu_find_tutor">Find a tutor</string>
    <string-array name="science_courses" >
        <item >Engineering Mathematics</item>
        <item >Electronics</item>
        <item >Thermodynamics</item>
        <item >Physics</item>
        <item >Mechanics</item>
        <item >Pure Chemistry</item>
        <item >Organic Chemistry</item>
        <item >Engineering Drawing</item>
        <item >Biology</item>
        <item >Fluid Mechanics</item>
        <item>Computer Architecture</item>
        <item >Digital System Pro</item>
        <item >Engineering Statistics</item>
        <item >Network Analysis</item>
        <item >Strength of Material</item>
        <item >Control Engineering</item>
        <item >Power Electronics</item>
        <item >Digital Signal Processing</item>
        <item >Mechanical Maintenance</item>
        <item >Microprogramming</item>
        <item >Pure Mathematics</item>
    </string-array>
    <string-array name="art_courses">
        <item>Literature</item>
        <item>Mass Communication</item>
        <item>Performing Arts and Culture</item>
        <item>Archaeology and Tourism</item>
    </string-array>
</resources>