<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lemzeeyyy.booklistapp.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav_book"
        android:name="com.lemzeeyyy.booklistapp.fragments.FavBookFragment"
        android:label="@string/menu_fav_book"
        tools:layout="@layout/fragment_fav_book" />

    <fragment
        android:id="@+id/nav_find_tutor"
        android:name="com.lemzeeyyy.booklistapp.fragments.FindTutorFragment"
        android:label="@string/menu_find_tutor"
        tools:layout="@layout/fragment_find_tutor" />
</navigation>