<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_shape"
        android:text="@string/lemzy"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/round_design"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lin1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_design"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/welcome_back"
            android:textColor="#312651"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22.5dp"
            android:text="@string/please_login_to_continue"
            android:textSize="15sp"
            android:textColor="#D0C9D6"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/email_loginET"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:layout_marginTop="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/lin1"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="emailAddress" />
    <!--<EditText
        android:id="@+id/password_loginET"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_loginET"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="password" /> -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_loginET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_loginET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_loginET"
        android:layout_marginTop="105dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/remember_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/forgotPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="158dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/round_corner"
        android:text="@string/login_now"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_loginET"
        android:textSize="15sp" />

    <Button
        android:id="@+id/createAcctLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="56dp"
        android:background="@android:color/transparent"
        android:text="@string/create_account"
        android:textColor="#312651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:textSize="12sp"
        android:id="@+id/or_cont_with_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAcctLogin"/>
    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_cont_with_txt"
        android:gravity="center"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/facebook_logo"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/google_icon"
            android:layout_weight="1"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>